Ticket/Attachment/1677755/900395/build.log
cpanm (App::cpanminus) 1.7042 on perl 5.024000 built for x86_64-linux
Work directory is /home/ferki/.cpanm/work/1476974241.1842
You have make /usr/bin/make
You have LWP 6.15
You have /bin/tar: tar (GNU tar) 1.28
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.

Written by John Gilmore and Jay Fenlason.
You have /usr/bin/unzip
Searching DBD::mysql () on cpanmetadb ...
--> Working on DBD::mysql
Fetching http://www.cpan.org/authors/id/C/CA/CAPTTOFU/DBD-mysql-4.038.tar.gz
-> OK
Unpacking DBD-mysql-4.038.tar.gz
Entering DBD-mysql-4.038
Checking configure dependencies from META.json
Checking if you have Data::Dumper 0 ... Yes (2.161)
Checking if you have DBI 1.609 ... Yes (1.636)
Configuring DBD-mysql-4.038
Running Makefile.PL


PLEASE NOTE:

For 'make test' to run properly, you must ensure that the
database user 'ferki' can connect to your MySQL server
and has the proper privileges that these tests require such
as 'drop table', 'create table', 'drop procedure', 'create procedure'
as well as others.

mysql> grant all privileges on test.* to 'ferki'@'localhost' identified by 's3kr1t';

You can also optionally set the user to run 'make test' with:

perl Makefile.PL --testuser=username

I will use the following settings for compiling and testing:

  cflags        (mysql_config) = -I/usr/include/mysql -I/usr/include/mysql/..
  embedded      (guessed     ) = 
  ldflags       (mysql_config) = 
  libs          (mysql_config) = -L/usr/lib64 -lmysqlclient -lpthread -lz -lm -lssl -lcrypto -ldl
  mysql_config  (guessed     ) = mysql_config
  nocatchstderr (default     ) = 0
  nofoundrows   (default     ) = 0
  nossl         (default     ) = 0
  testdb        (default     ) = test
  testhost      (default     ) = 
  testpassword  (default     ) = 
  testport      (default     ) = 
  testsocket    (default     ) = 
  testuser      (guessed     ) = ferki

To change these settings, see 'perl Makefile.PL --help' and
'perldoc DBD::mysql::INSTALL'.

Checking if your kit is complete...
Looks good
Using DBI 1.636 (for perl 5.024000 on x86_64-linux) installed in /home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/site_perl/5.24.0/x86_64-linux/auto/DBI/
Generating a Unix-style Makefile
Writing Makefile for DBD::mysql
Writing MYMETA.yml and MYMETA.json
-> OK
Checking dependencies from MYMETA.json ...
Checking if you have Test::Deep 0 ... Yes (1.123)
Checking if you have Test::Simple 0.90 ... Yes (1.302059)
Checking if you have ExtUtils::MakeMaker 0 ... Yes (7.24)
Checking if you have Time::HiRes 0 ... Yes (1.9740)
Checking if you have DBI 1.609 ... Yes (1.636)
Building and testing DBD-mysql-4.038
cp lib/Bundle/DBD/mysql.pm blib/lib/Bundle/DBD/mysql.pm
cp lib/DBD/mysql.pm blib/lib/DBD/mysql.pm
cp lib/DBD/mysql/GetInfo.pm blib/lib/DBD/mysql/GetInfo.pm
cp lib/DBD/mysql/INSTALL.pod blib/lib/DBD/mysql/INSTALL.pod
Running Mkbootstrap for mysql ()
chmod 644 "mysql.bs"
"/home/ferki/perl5/perlbrew/perls/perl-5.24.0/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- mysql.bs blib/arch/auto/DBD/mysql/mysql.bs 644
cc -c  -I/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/site_perl/5.24.0/x86_64-linux/auto/DBI -I/usr/include/mysql -I/usr/include/mysql/.. -DDBD_MYSQL_WITH_SSL -DDBD_MYSQL_INSERT_ID_IS_GOOD -g  -fwrapv -fno-strict-aliasing -pipe -fstack-protector-strong -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -O2   -DVERSION=\"4.038\" -DXS_VERSION=\"4.038\" -fPIC "-I/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/5.24.0/x86_64-linux/CORE"   dbdimp.c
"/home/ferki/perl5/perlbrew/perls/perl-5.24.0/bin/perl" -p -e "s/~DRIVER~/mysql/g" /home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/site_perl/5.24.0/x86_64-linux/auto/DBI/Driver.xst > mysql.xsi
"/home/ferki/perl5/perlbrew/perls/perl-5.24.0/bin/perl" "/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/5.24.0/ExtUtils/xsubpp"  -typemap '/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/5.24.0/ExtUtils/typemap'  mysql.xs > mysql.xsc
Warning: duplicate function definition 'do' detected in mysql.xs, line 247
Warning: duplicate function definition 'rows' detected in mysql.xs, line 764
mv mysql.xsc mysql.c
cc -c  -I/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/site_perl/5.24.0/x86_64-linux/auto/DBI -I/usr/include/mysql -I/usr/include/mysql/.. -DDBD_MYSQL_WITH_SSL -DDBD_MYSQL_INSERT_ID_IS_GOOD -g  -fwrapv -fno-strict-aliasing -pipe -fstack-protector-strong -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -O2   -DVERSION=\"4.038\" -DXS_VERSION=\"4.038\" -fPIC "-I/home/ferki/perl5/perlbrew/perls/perl-5.24.0/lib/5.24.0/x86_64-linux/CORE"   mysql.c
mysql.xs: In function ‘XS_DBD__mysql__GetInfo_dbd_mysql_get_info’:
mysql.xs:919:29: error: ‘MYSQL_OPT_NET_BUFFER_LENGTH’ undeclared (first use in this function)
      mysql_get_option(NULL, MYSQL_OPT_NET_BUFFER_LENGTH, &buffer_len);
                             ^
mysql.xs:919:29: note: each undeclared identifier is reported only once for each function it appears in
Makefile:353: recipe for target 'mysql.o' failed
make: *** [mysql.o] Error 1
-> FAIL Installing DBD::mysql failed. See /home/ferki/.cpanm/work/1476974241.1842/build.log for details. Retry with --force to force install it.
